--- a/accounts/templates/accounts/dashboard/transfer_detail.html
+++ b/accounts/templates/accounts/dashboard/transfer_detail.html
@@ -11,15 +11,12 @@
 <ul class="breadcrumb">
     <li>
 		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
-        <span class="divider">/</span>
     </li>
     <li>
 		<a href="{% url 'accounts-list' %}">{% trans "Accounts" %}</a>
-        <span class="divider">/</span>
     </li>
     <li>
 		<a href="{% url 'transfers-list' %}">{% trans "Transfers" %}</a>
-        <span class="divider">/</span>
     </li>
 	<li class="active">{{ transfer.reference }}</li>
 </ul>
@@ -29,41 +26,47 @@
 
 {% block dashboard_content %}
 
-<table id="" class="table">
-	<tbody>
-		<tr>
-			<th>{% trans "Reference" %}</th>
-			<td>{{ transfer.reference }}</td>
-		</tr>
-		<tr>
-			<th>{% trans "Source" %}</th>
-			<td><a href="{% url 'accounts-detail' transfer.source.id %}">{{ transfer.source }}</a></td>
-		</tr>
-		<tr>
-			<th>{% trans "Destination" %}</th>
-			<td><a href="{% url 'accounts-detail' transfer.destination.id %}">{{ transfer.destination }}</a></td>
-		</tr>
-		<tr>
-			<th>{% trans "Amount" %}</th>
-			<td>{{ transfer.amount|currency }}</td>
-		</tr>
-		<tr>
-			<th>{% trans "Merchant reference" %}</th>
-			<td>{{ transfer.merchant_reference|default:"-" }}</td>
-		</tr>
-		<tr>
-			<th>{% trans "Description" %}</th>
-			<td>{{ transfer.description|default:"-" }}</td>
-		</tr>
-		<tr>
-			<th>{% trans "Authorised by" %}</th>
-			<td>{{ transfer.user }}</td>
-		</tr>
-		<tr>
-			<th>{% trans "Date" %}</th>
-			<td>{{ transfer.date_created }}</td>
-		</tr>
-	</tbody>
-</table>
+
+<div class="panel panel-default">
+    <div class="panel-heading">{% trans "Transfers" %}</div>
+    <div>
+        <table id="" class="table">
+            <tbody>
+                <tr>
+                    <th>{% trans "Reference" %}</th>
+                    <td>{{ transfer.reference }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Source" %}</th>
+                    <td><a href="{% url 'accounts-detail' transfer.source.id %}">{{ transfer.source }}</a></td>
+                </tr>
+                <tr>
+                    <th>{% trans "Destination" %}</th>
+                    <td><a href="{% url 'accounts-detail' transfer.destination.id %}">{{ transfer.destination }}</a></td>
+                </tr>
+                <tr>
+                    <th>{% trans "Amount" %}</th>
+                    <td>{{ transfer.amount|currency }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Merchant reference" %}</th>
+                    <td>{{ transfer.merchant_reference|default:"-" }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Description" %}</th>
+                    <td>{{ transfer.description|default:"-" }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Authorised by" %}</th>
+                    <td>{{ transfer.user }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Date" %}</th>
+                    <td>{{ transfer.date_created }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
 {% endblock dashboard_content %}
