--- a/src/oscar_accounts/templates/accounts/dashboard/account_thaw.html
+++ b/src/oscar_accounts/templates/accounts/dashboard/account_thaw.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/layout.html' %}
+{% extends 'oscar/dashboard/layout.html' %}
 {% load currency_filters %}
 {% load i18n %}
 
@@ -12,7 +12,7 @@
 		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
     </li>
     <li>
-		<a href="{% url 'accounts-list' %}">{% trans "Accounts" %}</a>
+		<a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
     </li>
 	<li class="active">{% trans "Thaw account" %} #{{ account.id }}</li>
 </ul>
