--- a/src/oscar_accounts/templates/accounts/dashboard/account_top_up.html
+++ b/src/oscar_accounts/templates/accounts/dashboard/account_top_up.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/layout.html' %}
+{% extends 'oscar/dashboard/layout.html' %}
 {% load currency_filters %}
 {% load i18n %}
 
@@ -12,10 +12,10 @@
 		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
     </li>
     <li>
-		<a href="{% url 'accounts-list' %}">{% trans "Accounts" %}</a>
+		<a href="{% url 'accounts_dashboard:accounts-list' %}">{% trans "Accounts" %}</a>
     </li>
     <li>
-        <a href="{% url 'accounts-detail' account.id %}">{{ account }}</a>
+        <a href="{% url 'accounts_dashboard:accounts-detail' account.id %}">{{ account }}</a>
     </li>
     <li class="active">{% trans "Top up" %}</li>
 </ul>
@@ -33,11 +33,11 @@
             {% csrf_token %}
             <legend>{% trans "Transaction" %}</legend>
             {% if form.source_account %}
-                {% include 'partials/form_field.html' with field=form.source_account %}
+                {% include 'oscar/partials/form_field.html' with field=form.source_account %}
             {% endif %}
-            {% include 'partials/form_field.html' with field=form.amount %}
+            {% include 'oscar/partials/form_field.html' with field=form.amount %}
             <button type="submit" class="btn btn-large btn-success">{% trans "Top-up" %}</button>
-                or <a href="{% url 'accounts-detail' account.id %}">{% trans "cancel" %}</a>.
+                or <a href="{% url 'accounts_dashboard:accounts-detail' account.id %}">{% trans "cancel" %}</a>.
         </form>
         {% else %}
         <p>{% trans "This account cannot be topped-up." %}</p>
